<resources>
    <string name="app_name">G12 Bible</string>
    <string name="app_title_description">G12 Bible</string>
    <string name="powered_by_desc">Living Praise of Zion</string>
    <string name="powered_by">Powered by</string>
    <string name="loading">Loading …</string>
    <string name="available_spiritual_pts_0">Available Spiritual Pts: 0</string>
    <string name="member">Member</string>
    <string name="total_spiritual_pts_0">Total Spiritual Pts: 0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primary_photos">Primary Photos</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="personal_information_small">Personal Information</string>
    <string name="address_information">ADDRESS INFORMATION</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="social_accounts">SOCIAL ACCOUNTS</string>
    <string name="ministry_information">Ministry Information</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="tap_to_show_hide_content">Tap to show/hide content</string>
    <string name="church_name">Church Name</string>
    <string name="pastor_s_name">Pastor\'s Name</string>
    <string name="group_name">Group Name</string>
    <string name="cell_leader">Cell Leader</string>
    <string name="role">Role</string>
    <string name="residential_address">RESIDENTIAL ADDRESS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="header_basic_information">BASIC INFORMATION</string>
    <string name="header_permanent_address">PERMANENT ADDRESS</string>
    <string name="header_contact_information">CONTACT INFORMATION</string>
    <string name="header_profile_photo">PROFILE PHOTO</string>
    <string name="header_status">EVANGELISM STATUS</string>
    <string name="region">Region</string>
    <string name="edit">Edit</string>
    <string name="system_account">SYSTEM ACCOUNT</string>
    <string name="change_password">Change Password</string>
    <string name="validate_first_name">* First Name is required.</string>
    <string name="validate_last_name">* Last Name is required.</string>
    <string name="create_account_title_bar">Create An Account</string>
    <string name="dashboard_title_toolbar">Dashboard</string>
    <string name="menu_text_mnemonic_verse_toolbar">Mnemonic</string>
    <string name="menu_text_bible_story_toolbar">Story</string>
    <string name="profile_title_toolbar">Profile</string>
    <string name="profile_address_toolbar">Profile Address</string>
    <string name="basic_info_toolbar">Basic Information</string>
    <string name="achievements_title_toolbar">Achievements</string>
    <string name="claim_rewards_title_toolbar">Claim Rewards</string>
    <string name="church_title_bar">Church</string>
    <string name="roles_title_toolbar">Tracker</string>
    <string name="evangelism_title_toolbar">List Evangelized People</string>
    <string name="consolidate_title_toolbar">Consolidate</string>
    <string name="evangelism_title_toolbar_form">Evangelize Form</string>
    <string name="assignments_title_toolbar">Assignments</string>
    <string name="material_tools_toolbar">Tools</string>
    <string name="verify_email_toolbar">Verify Email Address</string>
    <string name="learning_materials_toolbar">Learning Materials</string>
    <string name="life_class_learning_materials_toolbar">Life Class Learning Materials</string>
    <string name="lessons_toolbar">List of Lessons</string>
    <string name="evangelize_materials">One Verse Evangelized (OVE)</string>
    <string name="contact_info_toolbar">Contact Information</string>
    <string name="profile_social_accounts_toolbar">Social Accounts</string>
    <string name="Open_Navigation">Open Navigation</string>
    <string name="Close_Navigation">Close Navigation</string>
    <string name="link_forget_password">Forgot Password</string>
    <string name="link_new_user_register_now">Register</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="hint_about">About</string>
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_name_extension">Name Extension</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_gender">Sex</string>
    <string name="hint_address">Address</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_place_of_birth">Place of Birth</string>
    <string name="hint_height">Height</string>
    <string name="hint_condition">Condition</string>
    <string name="hint_church">Church/Ministry</string>
    <string name="hint_network_leader">Network Leader</string>
    <string name="hint_invited_by_church">Invited By</string>
    <string name="hint_mode_of_evangelization">Mode of Evangelization</string>
    <string-array name="civil_status_list">
        <item>-</item>
        <item>Single</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="height_metric_list">
        <item>-</item>
        <item>CM</item>
        <item>Inch</item>
        <item>M</item>
    </string-array>
    <string-array name="weight_metric_list">
        <item>-</item>
        <item>KG</item>
        <item>LBS</item>
    </string-array>
    <string-array name="blood_type_list">
        <item>-</item>
        <item>A -</item>
        <item>B -</item>
        <item>AB -</item>
        <item>0 -</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>0</item>
        <item>A +</item>
        <item>B +</item>
        <item>AB +</item>
        <item>0 +</item>
    </string-array>
    <string-array name="privacy_settings_list">
        <item>PRIVATE</item>
        <item>SEARCH CODE</item>
        <item>PUBLIC</item>
    </string-array>
    <string-array name="mode_of_evangelization">
        <item>HOUSE TO HOUSE</item>
        <item>ONE ON ONE</item>
        <item>OPEN EVANGELISM</item>
        <item>SCHOOL</item>
        <item>VISITOR</item>
    </string-array>
    <string-array name="status_evangelization">
        <item>EVANGELIZE</item>
        <item>DROP</item>
        <item>CONSOLIDATE</item>
    </string-array>
    <string name="already_have_an_account">Already \nhave an account?</string>
    <string name="label_gender">Gender</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="list_civil_status">- Select Civil Status -</string>
    <string name="sample_text">-</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_civil_status">Civil Status</string>
    <string name="metric">Metric</string>
    <string name="height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_blood_type">Blood Type</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_date_evangelize">Date Evangelized</string>
    <string name="hint_date_drop_evangelize">Date Dropped</string>
    <string name="hint_date_consolidate_evangelize">Date Consolidated</string>
    <string name="title_activity_church_form">ChurchFormActivity</string>
    <string name="menu_text_chords_and_lyrics">Chords &amp; Lyrics</string>
    <string name="validate_artist_name_christian_artist">* Please input Artist Name</string>
    <string name="validate_artist_name_duplicated_christian_artist">* Artist Name is already existed, please try another name.</string>
    <string name="year_published_christian_album">Year Published: </string>
    <string name="validate_album_name_required_christian_album">* Please input Album Name</string>
    <string name="validate_song_required_christian_album">* Please input Number of Songs</string>
    <string name="validate_album_name_duplicated_christian_album">* Album Name is already existed, please try another name.</string>
    <string name="title_christian_song">Christian Song</string>
    <string name="title_of_the_song">Song Title</string>
    <string-array name="list_song_type_christian_song">
        <item>-</item>
        <item>PRAISE</item>
        <item>WORSHIP</item>
    </string-array>
    <string-array name="list_song_language_christian_song">
        <item>-</item>
        <item>BISAYA</item>
        <item>TAGALOG</item>
        <item>ENGLISH</item>
    </string-array>
    <string-array name="list_educational_background">
        <item>-</item>
        <item>Elementary Level</item>
        <item>Elementary Graduate</item>
        <item>High School Level</item>
        <item>High School Graduate</item>
        <item>College Level</item>
        <item>College Graduate</item>
        <item>Master\'s Degree</item>
        <item>Doctor\'s Degree</item>
    </string-array>
    <string-array name="list_family_condition">
        <item>-</item>
        <item>Normal</item>
        <item>Deceased</item>
        <item>Unknown</item>
        <item>Undetermined</item>
    </string-array>
    <string-array name="list_family_relationship">
        <item>-</item>
    </string-array>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_founded">Date Founded</string>
    <string name="name_of_founder">Name of Founder</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="mother_church">Mother Church</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="municipality_city">Municipality / City</string>
    <string name="barangay">Barangay</string>
    <string name="street">Street</string>
    <string name="subdivision_village">Subdivision / Village</string>
    <string name="house_block_lot_no">House Block / Lot No</string>
    <string name="address">ADDRESS</string>
    <string name="settings">SEARCH PRIVACY SETTINGS</string>
    <string name="view_members">View Members</string>
    <string name="view_organizational_chart">View Organizational Chart</string>
    <string name="save_record">Save</string>
    <string name="christian_song_navigation">Christian Songs</string>
    <string name="music_section">Music Section</string>
    <string name="add_new_record">Add New Record</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="edit_record">Edit Record</string>
    <string name="christian_album">Christian Album</string>
    <string name="search_record">Search Record</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_log_out">Log Out</string>
    <string name="radio_button_text_bug_report">Bug Report</string>
    <string name="radio_button_text_feedback">Feedback</string>
    <string name="radio_button_text_suggestion">Suggestion</string>
    <string name="radio_button_text_question">Question</string>
    <string name="textview_text_message_type">Message Type</string>
    <string name="menu_group_title_other_settings">Other</string>
    <string name="menu_text_christian_chords_amp_lyrics">Song</string>
    <string name="menu_title_holy_bible">Holy Bible</string>
    <string name="menu_title_ministry">Ministry</string>
    <string name="menu_title_learning_guide">Personal Guide</string>
</resources>