<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/search_record"
        android:id="@+id/menu_search_fragment_christian_artist"
        android:icon="@drawable/ic_icon_search"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/add_new_record"
        android:id="@+id/menu_add_fragment_christian_artist"
        android:icon="@drawable/ic_icon_add"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/save_record"
        android:id="@+id/menu_save_fragment_christian_artist"
        android:icon="@drawable/ic_icon_save"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

</menu>