<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/view_members"
        android:orderInCategory="0"
        android:id="@+id/tb_view_members_church"
        android:icon="@drawable/ic_icon_people"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/view_organizational_chart"
        android:orderInCategory="1"
        android:id="@+id/tb_view_organizational_chart_church"
        android:icon="@drawable/ic_icon_organizational_chart"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/save_record"
        android:orderInCategory="2"
        android:id="@+id/icon_menu_save_church"
        android:icon="@drawable/ic_icon_save"
        app:showAsAction="always"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/action_cancel"
        android:orderInCategory="3"
        android:id="@+id/icon_menu_cancel_church"
        android:icon="@drawable/ic_icon_cancel"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

    <item android:title="@string/edit_record"
        android:orderInCategory="4"
        android:id="@+id/icon_menu_edit_church"
        android:icon="@drawable/ic_icon_edit"
        app:showAsAction="always"
        android:iconTint="@color/white"
        tools:ignore="UnusedAttribute" />

</menu>