<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        style="@style/roundedBackground_ProgressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_text_message_type"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            >
            <RadioGroup
                android:id="@+id/rg_message_type_need_support"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_bug_report_need_support"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:checked="true"
                    android:text="@string/radio_button_text_bug_report" />
                <RadioButton
                    android:id="@+id/rb_feedback_need_support"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio_button_text_feedback" />
                <RadioButton
                    android:id="@+id/rb_suggestion_need_support"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio_button_text_suggestion" />
                <RadioButton
                    android:id="@+id/rb_question_need_support"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/radio_button_text_question" />
            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>