<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    style='@style/header_backcolor'
    >

    <RelativeLayout
        android:id="@+id/allowance_top"
        android:layout_width="match_parent"
        android:layout_marginTop="80px"
        android:layout_height="30dp"
        style='@style/header_backcolor'
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:text="@string/app_title_description"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:cardCornerRadius="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowance_top">

        <ImageView
            android:id="@+id/iv_photo_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/ic_person"
            android:visibility="gone"
             />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_first_name"
        android:visibility="gone"
        android:layout_marginStart="20px"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/allowance_top" />


    <TextView
        android:id="@+id/tv_username_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20px"

        android:text="@string/hint_username"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_home" />

    <TextView
        android:id="@+id/tv_designation_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allowance_top" />

    <TextView
        android:id="@+id/tv_available_spiritual_points_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_spiritual_pts_0"
        android:textSize="11sp"
        android:textStyle="italic"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_total_spiritual_points_home"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_total_spiritual_points_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="11sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:text="@string/total_spiritual_pts_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
